# opengate-data-examples

./: pyproject.toml
examples/: get_alarms.py  get_alarms_simple.py  search_entities.py
src/opengate_alarms/: client.py  filters.py
src/opengate_alarms/tui/: app.py
tests/: test_client.py
